# rstream

./: Cargo.toml  README.md  config.toml  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
src/: main.rs  metrics.rs
src/config/: mod.rs
src/connector/: mod.rs
src/core/: datum.rs  tuple.rs
src/server/: mod.rs
src/sql/expression/: aggregate.rs  function.rs  mod.rs  type_check.rs
src/sql/planner/: binder.rs  mod.rs  scalar.rs  scope.rs
src/sql/runtime/: builder.rs  executor.rs  mod.rs
src/sql/session/: mod.rs
src/storage/: relation.rs
