[package]
name = "rstream"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = { version = "0.32.0", features = ["visitor"] }
enum-as-inner = "0.5.1"
lazy_static = "1.4.0"
pgwire = "0.11.1"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.67"
futures = "0.3.27"
log = "0.4.17"
derive_more = "0.99.17"
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.204", features = ["serde_derive"] }
rumqttc = "0.24.0"
pretty_env_logger = "0.4"
serde_json = "1.0"
prometheus = "0.13"
sysinfo = "0.26"
toml = "0.5"
once_cell = "1.8"

[dev-dependencies]
hyper = "1.4.1"
sqllogictest = "0.13.0"
tower = "0.4.13"
